# ai-deck-translator

./: .env.example  .gitignore  Development Plan.md  PPTX_TRANSLATION_FIX.md  PROGRESS.md  Package.swift  README.md  automate_xcode_project.sh  create_xcode_project.md  mcp.json  mypy.ini  pytest_final.txt  pytest_final2.txt  pytest_final3.txt  pytest_final4.txt  pytest_final5.txt  pytest_final6.txt  pytest_final7.txt  pytest_output.txt  pytest_output10.txt  pytest_output2.txt  pytest_output3.txt  pytest_output4.txt  pytest_output5.txt  pytest_output6.txt  pytest_output7.txt  pytest_output8.txt  pytest_output9.txt  pytest_translator.txt  readme.md  requirements.txt  run.py  run_tests.py  sample_presentation.pptx  setup.cfg  setup.py  simple_id_verification.py  simple_test.py  standalone_test_memory.py  standalone_test_notes.py  (+14 more)
.github/workflows/: lint.yml  python-tests.yml
NEW/: enhanced_translator_v2.py  enhanced_translator_v2_documentation.md  example_usage_v2.py
Sources/: TranslationAssistantApp.swift
Sources/PPTXTranslation/: PPTXHandler.swift
Sources/ViewModels/: PPTXHandler.swift
XcodeProject/: Makefile  README.md  build-app-bundle.sh  build.sh  launch-app.sh  open_in_xcode.sh  test_build.swift
ai_deck_translator/: __init__.py  __main__.py  config.py  run.py
archive/: app13.py  batch-recovery.py  compare_pptx.py  deep_pptx_extractor.py  enhanced_pptx_translator.py  extract_slide_links.py  pptx_translator.py  ultimate_pptx_translator.py  web-ui-runner.py  web-ui.py
docs/: unified_architecture.md
gslides_translator/: __init__.py  config.py
temp_pptx_test/: extract_test.py  translated_output.pptx  translation.json  update_test.py  ~$translated_output.pptx
test_output/: 06734909-1d7d-4c0b-b91a-2b6353917aca_simple_test.pptx  7a0cd5b4-5278-44f3-9011-7f443ec959c3_test_format.pptx  971017fc-1178-44da-80e6-2536fd1344ca_test_format.pptx  9d1cf215-0a39-4f84-98fe-bb8c19ee833a_simple_test.pptx  df724644-95e8-4be9-870c-33cbda7fb2b2_simple_test.pptx  notes_test.pptx  test_presentation.pptx
tests/: test_batch.py  test_coherence_contract.py  test_config.py  test_development_plan.py  test_extractor.py  test_google_auth.py  test_init.py  test_jsonl_execute.py  test_main.py  test_native_slides.py  test_package.py  test_pptx_completeness.py  test_progress.py  test_readme.py  test_recovery.py  test_requirements.py  test_run.py  test_setup.py  test_translator.py  test_updater.py  test_verify_sweep.py  test_web.py  test_web_security.py
worker/: README.md  app.py  decktr-worker.service  preview.py  requirements.txt  slideverso-worker.service  test_gslides.py  test_preview.py  test_token_crypto.py  token_crypto.py
(+144 files in other folders)
