[metadata]
name = gslides_translator
version = attr: gslides_translator.__version__
author = Emmanuel Prouveze
author_email = example@example.com
description = Translate Google Slides presentations between languages
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eprouveze/gslides-translator
project_urls =
    Bug Tracker = https://github.com/eprouveze/gslides-translator/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.6
install_requires =
    google-auth>=2.19.0
    google-auth-oauthlib>=1.0.0
    google-auth-httplib2>=0.1.0
    google-api-python-client>=2.88.0
    anthropic>=0.5.0
    tqdm>=4.65.0
    flask>=2.3.2
    python-dotenv>=1.0.0

[options.packages.find]
where = .

[flake8]
max-line-length = 100
exclude = .git,__pycache__,docs/,build/,dist/,venv/

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*

[mypy]
python_version = 3.8
warn_return_any = True
warn_unused_configs = True
disallow_untyped_defs = False
disallow_incomplete_defs = False

[isort]
profile = black
line_length = 100 